--- a/src/assets/quasar-variables.sass
+++ b/src/assets/quasar-variables.sass
@@ -1,5 +1,5 @@
-$primary   : #1976D2
-$secondary : #26A69A
+$primary   : #102945
+$secondary : #c9a15b
 $accent    : #9C27B0
 
 $dark      : #1D1D1D
