Update ServicosView with detailed service offerings and improve layout; adjust font weight for emphasis in main styles

--- a/src/assets/main.sass
+++ b/src/assets/main.sass
@@ -30,7 +30,7 @@ a
     -moz-text-decoration-color: transparent
 
 b
-  font-weight: medium
+  font-weight: bold
 
 .text-light-positive
   color: #D2F7EF !important
