--- a/src/assets/quasar-variables.sass
+++ b/src/assets/quasar-variables.sass
@@ -8,3 +8,8 @@ $positive  : #21BA45
 $negative  : #C10015
 $info      : #31CCEC
 $warning   : #F2C037
+
+
+$subtitle1: (size: 1rem, line-height: 1.5rem, letter-spacing: 0, weight: 500) !default
+$subtitle2: (size: 0.875rem, line-height: 1.3125rem, letter-spacing: 0, weight: 500) !default
+$body1: (size: 1rem, line-height: 1.5rem, letter-spacing: 0, weight: 500) !default
