Update CardPlanos component to enhance button styling; add grey text class for improved visibility

--- a/src/assets/quasar-variables.sass
+++ b/src/assets/quasar-variables.sass
@@ -13,3 +13,11 @@ $warning   : #F2C037
 $subtitle1: (size: 1rem, line-height: 1.5rem, letter-spacing: 0, weight: 500) !default
 $subtitle2: (size: 0.875rem, line-height: 1.3125rem, letter-spacing: 0, weight: 500) !default
 $body1: (size: 1rem, line-height: 1.5rem, letter-spacing: 0, weight: 500) !default
+
+
+$grey-1: #e0e0e0 !default
+$grey-3: #F5F6F8!default
+$grey-4: #E8E9EE!default
+$grey-6: #DEDFE7 !default
+$grey-7: #CFD3E3 !default
+$grey-8: #9196AF !default
